--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </div>
     <div class="section" style="background-image: url(http://dl.bizhi.sogou.com/images/1440x900/2014/12/17/1006646.jpg);">
       <!-- 看书 || 快速浏览 -->
+      <h1 class="project-title">项目经验</h1>
       <div class="status">
         <span data-status='book'>看书模式</span>
         <span  class="status-active" data-status='quickly'>快速浏览模式</span>
@@ -93,8 +94,25 @@
       </div>
     </div>
     <div class="section">
-      <h3>第三屏</h3>
-      <p>圆圈还可以设置位置，颜色，加上 tip，点击可以控制</p>
+      <h1 class="project-title">专业技能及自我评价</h1>
+      <div class="rows skill-box">
+        <div class="flex-box">
+          <div><img alt="" src="images/avator.jpg"/></div>
+          <div>
+              <h3>漩涡鸣人</h3>
+
+              <p>日本漫画家岸本齐史作品《火影忍者》中男主角。因为身上封印着邪恶的九尾妖狐，无父无母的他受尽了村人的冷眼与歧视，他下定决心要成为第六代火影，让所有人都认同他的存在。</p>
+          </div>
+        </div>
+        <div class="flex-box">
+          <div><img alt="" src="images/bg.jpg"/></div>
+          <div>
+              <h3>蒙奇·D·路飞</h3>
+
+              <p>蒙奇·D·路飞 是日本人气动漫 《海贼王》中的主人公。是日本人气动漫 《海贼王》中的主人公。草帽海贼团船长，梦想是找到传说中的宝藏 —— ONE PIECE，成为海贼王。</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
