添加个人介绍和自我评价

--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
       <div class="rows look-box" id="quickly">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-              <div class="swiper-slide">Slide 1</div>
+              <div class="swiper-slide">
+                <div class="sw-project">
+                  <p class="pro-box">项目名称: 亚丁直播<small> 2017/05 - 2017/09</small></p>
+                  <p class="pro-box">责任描述:</p>
+                  <p class="dec-box">
+                    
+                  </p>
+                </div>
+              </div>
               <div class="swiper-slide">Slide 2</div>
               <div class="swiper-slide">Slide 3</div>
               <div class="swiper-slide">Slide 4</div>
@@ -97,20 +105,29 @@
       <h1 class="project-title">专业技能及自我评价</h1>
       <div class="rows skill-box">
         <div class="flex-box">
-          <div><img alt="" src="images/avator.jpg"/></div>
-          <div>
-              <h3>漩涡鸣人</h3>
-
-              <p>日本漫画家岸本齐史作品《火影忍者》中男主角。因为身上封印着邪恶的九尾妖狐，无父无母的他受尽了村人的冷眼与歧视，他下定决心要成为第六代火影，让所有人都认同他的存在。</p>
+          <h2 class="second-title">专业技能</h2>
+          <div class="dec-box">
+            <p>1.熟悉JavaScript基础语法、</p>
+            <p>2.常使用vue、jqurey、zpeto等框架、</p>
+            <p>3.熟悉webpack打包工具、</p>
+            <p>4.熟练使用echarts，地图api等常用api、</p>
+            <p>5.熟练使用HTML+CSS编写静态网页、</p>
+            <p>6.熟悉DOM、BOM节点操作、</p>
+            <p>7.熟悉前后端交互、</p>
+            <p>8.对双向数据绑定模块化有所理解</p>
           </div>
         </div>
         <div class="flex-box">
-          <div><img alt="" src="images/bg.jpg"/></div>
-          <div>
-              <h3>蒙奇·D·路飞</h3>
-
-              <p>蒙奇·D·路飞 是日本人气动漫 《海贼王》中的主人公。是日本人气动漫 《海贼王》中的主人公。草帽海贼团船长，梦想是找到传说中的宝藏 —— ONE PIECE，成为海贼王。</p>
-          </div>
+            <h2 class="second-title">自我评价</h2>
+            <div class="dec-box">
+              <p>1.喜欢学习研究前端新技术</p>
+              <p>2.喜欢在错误中找到自己的不足，越战越勇，快速定位问题加以改正</p>
+              <p>3.考虑事情从多面性考虑 </p>
+              <p>4.熟悉常见页面架构和布局；能快速处理主流浏览器的兼容性问题</p>
+              <p>5.熟练使用flex/rem等手机端常用布局方式</p>
+              <p>6.熟练使用mui/framework7等ui框架</p>
+              <p>7.对工作认真，有责任心，踏实可靠，沟通表达能力较好，注重团队合作</p>
+            </div>
         </div>
       </div>
     </div>
