--- a/index.html
+++ b/index.html
@@ -8,46 +8,48 @@
   <link rel="stylesheet" href="css/jquery.fullPage.css">
   <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/typing.css">
+  <link href="https://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="main">
-    <div class="section" style="background-image: url(images/bg.jpg);">
+    <div class="section" style="background: url(images/bg.jpg) no-repeat;">
       <div id="particles"></div>
       <div class="introduce">
-        <h1>个人介绍<span class="title-dec"> (来自一个帅到原地爆炸的男人...)</span></h1>
-        <div>
+        <h1 class="animated bounceInDown">个人介绍<span class="title-dec"> (来自一个帅到原地爆炸的男人...)</span></h1>
+        <div class="animated bounceInDown">
           <img src="images/avator.jpg" alt="" width="100" height="100" class="avator">
         </div>
         <div class="intro-box">
-          <span class="left-title">姓名:</span><span class="right-intro">刘闵科</span>
+          <span class="left-title animated bounceInLeft">姓名:</span><span class="right-intro animated bounceInRight">刘闵科</span>
         </div>
         <div class="intro-box">
-          <span class="left-title">学历:</span><span class="right-intro">大专</span>
+          <span class="left-title animated bounceInLeft">学历:</span><span class="right-intro animated bounceInRight">大专</span>
         </div>
         <div class="intro-box">
-          <span class="left-title">年龄:</span><span class="right-intro">21岁</span>
+          <span class="left-title animated bounceInLeft">年龄:</span><span class="right-intro animated bounceInRight">21岁</span>
         </div>
         <div class="intro-box">
-          <span class="left-title">状态:</span><span class="right-intro">离职</span>
+          <span class="left-title animated bounceInLeft">状态:</span><span class="right-intro animated bounceInRight">离职</span>
         </div>
         <div class="intro-box">
-          <span class="left-title">职业 / 经验 / 薪资:</span>
-          <span class="right-intro">Web前端开发 / 2年 / 6-8k</span>
+          <span class="left-title animated bounceInLeft">职业 / 经验 / 薪资:</span>
+          <span class="right-intro animated bounceInRight">Web前端开发 / 2年 / 6-8k</span>
         </div>
         <div class="intro-box">
-          <span class="left-title">联系电话/邮箱/QQ:</span><span class="right-intro">18583291219</span>
+          <span class="left-title animated bounceInLeft">联系电话/邮箱/QQ:</span>
+          <span class="right-intro animated bounceInRight">18583291219</span>
         </div>
         <div class="intro-box">
-          <span class="left-title"></span><span class="right-intro">boom_lmk@sina.com</span>
+          <span class="left-title"></span><span class="right-intro animated bounceInRight">boom_lmk@sina.com</span>
         </div>
         <div class="intro-box">
-          <span class="left-title"></span><span class="right-intro">1056509662</span>
+          <span class="left-title"></span><span class="right-intro animated bounceInRight">1056509662</span>
         </div>
       </div>  
     </div>
-    <div class="section" style="background-image: url(http://dl.bizhi.sogou.com/images/1440x900/2014/12/17/1006646.jpg);">
+    <div class="section" style="background: url(http://dl.bizhi.sogou.com/images/1680x1050/2015/01/08/1037179.jpg) no-repeat;">
       <!-- 看书 || 快速浏览 -->
-      <h1 class="project-title">项目经验</h1>
+      <h1 class="project-title animated">项目经验</h1>
       <div class="status">
         <span data-status="book">看书模式</span>
         <span  class="status-active" data-status="quickly">快速浏览模式</span>
@@ -296,9 +298,9 @@
         </div>
       </div>
     </div>
-    <div class="section" style="background-image: url(http://4493bz.1985t.com/uploads/allimg/140930/4-140930105958.jpg);">
+    <div class="section" style="background: url(http://4493bz.1985t.com/uploads/allimg/140930/4-140930105958.jpg) no-repeat;">
       <div class="bg-opacity">
-        <h1 class="project-title">专业技能及自我评价</h1>
+        <h1 class="project-title hided" style="display:none">专业技能及自我评价</h1>
         <div class="rows skill-box">
           <div class="flex-box source" id="source0" style="display:none">
             <h2 class="second-title">专业技能</h2>
@@ -352,11 +354,12 @@
       slidesColor: ['#1bbc9b', '#4BBFC3', '#7BAABE'],
       navigationTooltips: ['基本资料','项目经验','自我评价'],
       navigation: true,
-      onLeave:function(index,nextIndex,direction ){
+      onLeave:function(index,nextIndex,direction ){ 
         if(index==2){
           /* 如果下标为2那么则执行typed,防止重复执行该方法,所以设置flag限制*/
           typed();
           flag=false;
+          $(".hided").show();
         }
       }
     });
