--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta content="always" name="referrer">
+  <meta name="keywords" content="个人简历 gitpage简历" />
+  <meta name="description" content="刘闵科的在线简历" />
+  <meta name="author" content="刘闵科" />
   <title>个人简介</title>
   <link rel="icon" type="image/x-icon" href="images/l.jpg">
   <link rel="stylesheet" href="css/jquery.fullPage.css">
